index rel style.ccv2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,9 +6,10 @@
       name="viewport"
       content="width=device-width, initial-scale=1, viewport-fit=cover"
     />
+      <link rel="stylesheet" href="style.css?v=2" />
 
     <title>HÁBLAME – MVP</title>
-    <link rel="stylesheet" href="style.css" />
+    
   </head>
 
   <body>
