Remove IA title

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -70,7 +70,7 @@
 
             <div class="chat-header-info">
               <div class="chat-title" id="chatTitle">
-                Chat con IA
+                Chat
               </div>
               <div class="chat-subtitle">
                 Perfil:
