--- a/frontend/index_backup.html
+++ b/frontend/index_backup.html
@@ -29,7 +29,7 @@
     <main class="chat-area">
       <header class="chat-header">
         <div>
-          <div class="chat-title" id="chatTitle">Chat con IA</div>
+          <div class="chat-title" id="chatTitle">Chat</div>
           <div class="chat-subtitle">
             Personaje: <span id="currentCharacterName"></span>
           </div>
